2003-06-12  Bastien Nocera  <hadess@hadess.net>

	* data/properties.glade: remove unneeded gnome dependency
	* src/bacon-video-widget-properties.c: remove the separator
	(bacon_video_widget_properties_new):
	* src/totem-download.c: (cab_extract),
	(cab_url_from_fourcc_with_url), (cab_download_from_td_try),
	(cab_download), (totem_download_from_fourcc):
	* src/totem.c: (totem_action_error_try_download),
	(totem_action_set_mrl): check if the codec was downloaded correctly
	before trying to play the video again

2003-06-11  Dennis Cranston <dennis_cranston at yahoo com>

	* data/totem.glade:  Fix widget padding per HIG.  Fix case of various
	strings and adds/removes mnemonics per HIG.
	
	* data/playlist.glade:  Fix case and add a missing mnemonic for check 
	item.  Set border width to be consistant with the HIG.
	
	* data/properties.glade, data/totem-download.glade,
	  data/uri.glade:  Fix widget padding per HIG.
	  
2003-06-11  Bastien Nocera  <hadess@hadess.net>

	* src/totem-video-thumbnailer.c: (main): more tweaks for thumbnailing
	small streams

2003-06-11  Bastien Nocera  <hadess@hadess.net>

	* data/schemas.sh: try to thumbnail Real Video files
	* src/totem.c: (totem_action_error_try_download): added a FIXME

2003-06-11  Bastien Nocera  <hadess@hadess.net>

	* configure.in: fixes to get the HAVE_X86 #define right
	* src/bacon-video-widget-xine.c:
	(bacon_video_widget_can_get_frames),
	(bacon_video_widget_get_current_frame): don't whinge on 0x0 dimensions,
	probably an error, or fail later while getting the frame
	* src/totem-video-thumbnailer.c: (main): try harder to capture small
	streams, fixes thumbnailing real short films
	* src/totem.c: (totem_action_set_mrl), (totem_setup_recent):
	fix a crash on startup with setting the limit of the egg_recent stuff,
	try to reopen the movie after downloading a new codec so it can be
	played straight away, removed some unused debug

2003-06-11  Bastien Nocera  <hadess@hadess.net>
