@@ -1,3 +1,9 @@
+2003-06-13  Julien MOUTTE <julien@moutte.net>
+
+	* src/bacon-video-widget-gst.c: (bacon_video_widget_set_volume),
+	(bacon_video_widget_get_volume): Fixed volume slider setting/getting
+	volume. Thanks to kmaraas.
+
 2003-06-12  Bastien Nocera  <hadess@hadess.net>
 
 	* data/properties.glade: remove unneeded gnome dependency
